Changelog for TimedMessages (v1.2.3-SNAPSHOT)

2013-02-20 16:49:57 +0000    upcase mode for compatability (James Richardson)
2013-02-20 16:42:38 +0000    added region specific messages, fixes #12 (James Richardson)
2013-02-20 16:30:41 +0000    allow configuring a list of regions for a message to be displaying within (James Richardson)
2013-02-20 16:27:35 +0000    add WorldGuard intergration (James Richardson)
2013-02-20 16:00:40 +0000    fix references to old worldName (James Richardson)
2013-02-20 15:59:17 +0000    added ability to set multiple target worlds (James Richardson)
2013-02-20 15:40:30 +0000    moved MessageCreation logic to MessageConfiguration (James Richardson)
2013-02-20 15:25:07 +0000    implement PermissionManager (James Richardson)
2013-02-20 15:11:22 +0000    change parent-pom name (James Richardson)

v1.2.2
2012-08-08 06:32:11 +0100    prepare for release (James Richardson)
2012-08-07 10:42:07 +0100    update to BukkitUtils 4.1.0 (James Richardson)

v1.2.1
2012-08-02 11:15:42 +0100    back one (James Richardson)
2012-08-02 11:14:09 +0100    mess up with version names somehow (James Richardson)
2012-08-02 11:07:41 +0100    change to notify by default parent pom (James Richardson)
2012-07-29 18:19:56 +0100    preparing for snapshot testing (James Richardson)
2012-07-29 17:22:31 +0100    add option to disable statistic collection (James Richardson)
2012-07-29 17:16:40 +0100    preparing for release (James Richardson)
2012-07-29 17:07:06 +0100    fix key mismatch (James Richardson)
2012-07-29 17:05:50 +0100    use new localisation method (James Richardson)
2012-07-29 16:49:53 +0100    implement metrics (James Richardson)
2012-07-29 16:33:48 +0100    sort members (James Richardson)
2012-07-29 16:33:12 +0100    update to latest bukkitutils (James Richardson)

v1.2.0
2012-06-16 01:02:05 +0100    preparing to release (James Richardson)
2012-06-15 21:18:15 +0100    Updated TimedMessages to use new updater (James Richardson)