@@ -64,6 +64,11 @@ public class MessagesConfiguration extends AbstractYAMLStorage {
       final String permission = storage.getString("permission");
       final List<String> worlds = storage.getStringList("worlds");
       final List<String> regions = storage.getStringList("regions");
+      if (worlds.isEmpty() && !regions.isEmpty()) {
+        this.getLogger().warning(this, "world-needs-to-be-configured", storage.getName());
+        this.getLogger().warning(this, "message-ignored", storage.getName());
+        continue;
+      }
       switch (MessageTypes.valueOf(storage.getString("mode", "ROTATION").toUpperCase())) {
       case ROTATION:
         message = new RotatingMessage(plugin, plugin.getServer(), milliseconds, messages, permission, worlds, regions);
