@@ -1,9 +1,9 @@
 
 # Plugin messages
 timedmessages.description: Broadcast messages at specific times.
-timedmessages.no-timers: no timers
-timedmessages.one-timer: one timer
-timedmessages.many-timers: {0,number} timers
+
+messageconfiguration.world-needs-to-be-configured: You have specified regions for message '{0}' but no worlds. 
+messageconfiguration.message-ignored: {0} has can not be used until the above error is fixed.
 
 # ReloadCommand
 reloadcommand.name: reload
